--- a/admin/index.html
+++ b/admin/index.html
@@ -2,24 +2,11 @@
 <html>
 <head>
   <meta charset="utf-8" />
-  <title>Auto Parts Manager</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Content Manager</title>
   <script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
 </head>
 <body>
-  <h1>Welcome to Auto Parts</h1>
-  <p>To manage your parts, go to: <a href="/admin/">/admin</a></p>
-
-  <script>
-    // This code automatically redirects you to the Admin page after you login
-    if (window.netlifyIdentity) {
-      window.netlifyIdentity.on("init", user => {
-        if (!user) {
-          window.netlifyIdentity.on("login", () => {
-            document.location.href = "/admin/";
-          });
-        }
-      });
-    }
-  </script>
+  <script src="https://unpkg.com/decap-cms@^3.0.0/dist/decap-cms.js"></script>
 </body>
 </html>
