--- a/index.html
+++ b/index.html
@@ -60,6 +60,25 @@
 
         /* WhatsApp Button */
         .wa-float { position: fixed; bottom: 20px; right: 20px; background: #25d366; color: white; padding: 15px 25px; border-radius: 50px; text-decoration: none; font-weight: bold; box-shadow: 0 4px 10px rgba(0,0,0,0.3); z-index: 1000; }
+      /* ... existing styles ... */
+
+  /* This moves the sidebar to the top on phones */
+  @media (max-width: 768px) {
+    .container { 
+      display: flex;
+      flex-direction: column !important; 
+    }
+    .sidebar { 
+      width: 100% !important; 
+      border-right: none !important;
+      margin-bottom: 20px;
+    }
+    .main-content {
+      width: 100% !important;
+    }
+  }
+
+</style>
     </style>
 </head>
 <body>
@@ -133,4 +152,5 @@
 </body>
 
 </html>
+
 
