--- a/index.html
+++ b/index.html
@@ -1,33 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<!DOCTYPE html>
-<html>
-<head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Content Manager</title>
-  <script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
-</head>
-<body>
-  <script src="https://unpkg.com/decap-cms@^3.0.0/dist/decap-cms.js"></script>
-</body>
-</html>    
-    <!DOCTYPE html>
-<html>
-<head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Content Manager</title>
-  <script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
-</head>
-<body>
-  <script src="https://unpkg.com/decap-cms@^3.0.0/dist/decap-cms.js"></script>
-</body>
-</html>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Auto Parts Express - Lebanon</title>
+    <script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
     <style>
         body { font-family: Arial, sans-serif; margin: 0; display: flex; flex-direction: column; height: 100vh; background: #f4f4f4; }
         
@@ -40,10 +17,10 @@
         .search-container button { padding: 12px 25px; background: #d63031; color: white; border: none; border-radius: 5px; cursor: pointer; font-weight: bold; }
 
         /* Layout */
-        .main-container { display: flex; flex: 1; }
+        .main-container { display: flex; flex: 1; overflow: hidden; }
 
-        /* Sidebar - The Combined Version */
-        .sidebar { width: 220px; background: white; padding: 20px; border-right: 1px solid #ddd; height: calc(100vh - 150px); overflow-y: auto; }
+        /* Sidebar */
+        .sidebar { width: 220px; background: white; padding: 20px; border-right: 1px solid #ddd; height: 100%; overflow-y: auto; }
         .sidebar h3 { font-size: 1.1rem; margin-bottom: 15px; color: #333; }
         .sidebar label { display: block; margin-bottom: 8px; font-size: 0.9rem; cursor: pointer; }
 
@@ -56,29 +33,18 @@
         .img-placeholder img { width: 100%; height: 100%; object-fit: cover; }
         .price { color: #d63031; font-weight: bold; font-size: 1.3rem; margin: 10px 0; }
         .btn { display: block; text-align: center; background: #d63031; color: white; padding: 10px; border-radius: 5px; text-decoration: none; font-weight: bold; margin-top: auto; }
-        .btn:hover { background: #b32626; }
 
         /* WhatsApp Button */
         .wa-float { position: fixed; bottom: 20px; right: 20px; background: #25d366; color: white; padding: 15px 25px; border-radius: 50px; text-decoration: none; font-weight: bold; box-shadow: 0 4px 10px rgba(0,0,0,0.3); z-index: 1000; }
-      /* ... existing styles ... */
 
-  /* This moves the sidebar to the top on phones */
-  @media (max-width: 768px) {
-    .container { 
-      display: flex;
-      flex-direction: column !important; 
-    }
-    .sidebar { 
-      width: 100% !important; 
-      border-right: none !important;
-      margin-bottom: 20px;
-    }
-    .main-content {
-      width: 100% !important;
-    }
-  }
-
-</style>
+        /* MOBILE FIX: Moves categories to top so parts aren't squished */
+        @media (max-width: 768px) {
+            body { height: auto; }
+            .main-container { flex-direction: column; height: auto; overflow: visible; }
+            .sidebar { width: 100%; height: auto; border-right: none; border-bottom: 1px solid #ddd; padding: 15px; box-sizing: border-box; }
+            .results { padding: 15px; overflow: visible; }
+            .search-container input { width: 80%; margin-bottom: 10px; }
+        }
     </style>
 </head>
 <body>
@@ -124,7 +90,7 @@
                 <p style="color: #666; font-size: 0.8rem; margin: 5px 0;">Serial: <b>61-34255-00</b></p>
                 <p style="font-size: 0.85rem; color: #444;">Victor Reinz quality. Fits Mercedes M271 engines.</p>
                 <div class="price">$35.00</div>
-                <a href="order.html" class="btn">ORDER NOW</a>
+                <a href="#" class="btn">ORDER NOW</a>
             </div>
 
             <div class="part-card">
@@ -133,24 +99,23 @@
                 <p style="color: #666; font-size: 0.8rem; margin: 5px 0;">Serial: <b>A0044208720</b></p>
                 <p style="font-size: 0.85rem; color: #444;">Ceramic pads for Mercedes E-Class (W211).</p>
                 <div class="price">$45.00</div>
-                <a href="order.html" class="btn">ORDER NOW</a>
-            </div>
-
-            <div class="part-card">
-                <div class="img-placeholder">IMAGE: oil-filter.jpg</div>
-                <h4 style="margin: 0;">Genuine Oil Filter</h4>
-                <p style="color: #666; font-size: 0.8rem; margin: 5px 0;">Serial: <b>11427566327</b></p>
-                <p style="font-size: 0.85rem; color: #444;">Fits BMW N52/N54 engines. German quality.</p>
-                <div class="price">$15.00</div>
-                <a href="order.html" class="btn">ORDER NOW</a>
+                <a href="#" class="btn">ORDER NOW</a>
             </div>
         </div>
     </div>
 
     <a href="https://wa.me/96178846192" class="wa-float">💬 WhatsApp Us</a>
 
+    <script>
+      if (window.netlifyIdentity) {
+        window.netlifyIdentity.on("init", user => {
+          if (!user) {
+            window.netlifyIdentity.on("login", () => {
+              document.location.href = "/admin/";
+            });
+          }
+        });
+      }
+    </script>
 </body>
-
 </html>
-
-
